EDAN01/minizinc-1.6/tests/flattening/array-access-bad.mzn
array[1..3] of int: a = [1,2,3];
constraint a[4] > 0;
solve satisfy;
